# PA-groupe-15-3IABD1

./: 2021_3A_IABD1_linear_model_and_mlp_demo (4).ipynb  Cargo.toml  Notebook_CAS_DE_TESTS_GROUPE_15.ipynb  Notebook_CAS_DE_TESTS_GROUPE_15_SVM.ipynb  Notebook___CAS_DE_TESTS.ipynb  Notebook___CAS_DE_TESTS_RBF_SVM.ipynb  README.md  Rapport_Groupe_15.ipynb  app.py  dashboard.py  predict.py  sklearn_wrapper.py  test.py  test2.py  test_bug.py  test_dataset.ipynb  test_dataset.py  test_dataset_linear_model.py  test_mlp_dataset.py  test_rbf.py
.ipynb_checkpoints/: Notebook_CAS_DE_TESTS_GROUPE_15-checkpoint.ipynb  Notebook_CAS_DE_TESTS_GROUPE_15_SVM-checkpoint.ipynb  Notebook___CAS_DE_TESTS-checkpoint.ipynb  Notebook___CAS_DE_TESTS_RBF_SVM-checkpoint.ipynb  Rapport_Groupe_15-checkpoint.ipynb  test_dataset-checkpoint.ipynb  test_dataset_wo_multiclass-checkpoint.ipynb  test_rbf-checkpoint.ipynb  transform_dataset-checkpoint.ipynb
src/: lib.rs  main.rs
templates/: display_results.html  footer.html  header.html  index.html  predict_rbf.html  result.html
test_cas_de_tests/MLP/: model_xor_17_07_2021_23_06.json  model_xor_17_07_2021_23_07.json  model_xor_17_07_2021_23_08.json  model_xor_17_07_2021_23_09.json  model_xor_25_07_2021_11_09.json
test_cas_de_tests/RBF/: model_linear_simple_19_07_2021_16_38.json  model_linear_simple_19_07_2021_19_17.json
test_cas_de_tests/linear_model/: test_linear_model.json
test_dataset/: test_dataset_rbf_wo_multiclass.ipynb
test_dataset/MLP/: model_mlp_dataset.json  model_mlp_dataset_21_07_2021_13_51.json  (+42 more)
(+108 files in other folders)
