[package]
name = "PA-groupe-15-3IABD1"
version = "0.1.0"
authors = ["NamizataS <nsangare@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_lib"
crate-type = ["cdylib"]

[dependencies]
rand="0.8.3"
libm = "0.2.1"
nalgebra="0.26.2"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
osqp = "0.6.2"
itertools = "0.10.0"
ndarray = {version = "0.13"}